name:                haskelCat
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskelCat#readme
license:             BSD3
license-file:        LICENSE
author:              Iain Lumsden
maintainer:          example@example.com
copyright:           2016 Iain Lumsden
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskelCat
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, directory, filepath
